# alpha

./: Ar.mac  CMakeLists.txt  N2.mac  README.md  air.mac  alpha.cc  plt.py  run.mac  vis.mac
alpha/: CMakeLists.txt  alpha.cc
alpha/include/: G4Radioactivation.hh  PhysicsList.hh  PrimaryGeneratorAction.hh
alpha/src/: PrimaryGeneratorAction.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  HistoManager.hh  PhysicsList.hh  PhysicsListMessenger.hh  PrimaryGeneratorAction.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  HistoManager.cc  PhysicsList.cc  PhysicsListMessenger.cc  PrimaryGeneratorAction.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc
